--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,6 +11,7 @@
   --dark-secondary: #1a1a1a;
   
   --green-primary: #40c762;
+  --red-primary: #ed1543;
 
   --text-primary: #e7e8f2;
   --text-secondary: #c6c7d0;
@@ -29,6 +30,7 @@ body {
 
 /* Section do Navbar */
 .navbar {
+  /* position: fixed; */
   max-width: 18.75rem;
   width: 100%;
   height: 100vh;
@@ -77,7 +79,7 @@ body {
   color: var(--green-primary);
 }
 
-/* Página SOBRE */
+/* ======= Página SOBRE ======= */
 
 .about-container {
   display: flex;
@@ -176,3 +178,72 @@ body {
   font-size: 1.75rem;
 }
 
+/* ======= Página CONHECIMENTOS ======= */
+
+.knowledge-container {
+  padding: 2rem;
+  width: 100%;
+}
+
+.knowledge-container > h1 {
+  padding: 2rem;
+  font-size: 3rem;
+}
+
+.knowledge-container > section {
+  padding: 2rem;
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+}
+
+.knowledge-container > section > article {
+  padding: 2rem;
+  border-radius: 8px;
+  background-color: var(--dark-secondary);
+}
+
+.card-container {
+  margin-top: 1rem;
+  display: grid;
+  gap: 1rem;
+
+  font-weight: 700;
+}
+
+.card-container li {
+  background-color: #282a36;
+  padding: 1rem;
+  border-radius: 8px;
+}
+
+.card-container li div {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.card-container li div h3 {
+  font-size: 1.25rem;
+}
+
+.card-container li div img {
+  width: 50px;
+  height: 50px;
+  block-size: fit-content;
+}
+
+.card-container li span {
+  display: block;
+  font-weight: 700;
+  margin-top: 0.75rem;
+}
+
+.card-container li span p {
+  display: inline;
+  font-weight: 700;
+  font-size: 0.85rem;
+  padding: 0.25rem;
+  border-radius: 5px;
+  background-color: var(--red-primary);
+}
