--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -29,10 +29,31 @@ body {
   display: flex;
 }
 
+/* Scroll personalizado*/
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--green-primary); 
+}
+
 /* Section do Navbar */
 .navbar {
-  /* position: fixed; */
+  position: fixed;
   max-width: 18.75rem;
+  min-width: 17rem;
   width: 100%;
   height: 100vh;
 
@@ -45,6 +66,13 @@ body {
   border-bottom-right-radius: 10px;
 
   background-color: var(--dark-secondary);
+}
+
+.space {
+  max-width: 18.75rem;
+  min-width: 17rem;
+  width: 100%;
+  height: 100vh;
 }
 
 .image-container {
@@ -212,9 +240,11 @@ body {
 }
 
 .card-container {
+  max-width: 1420px;
   display: flex;
   gap: 2.5rem;
   font-weight: 700;
+  overflow-x: auto;
 }
 
 .card-container li {
