--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -33,10 +33,11 @@ body {
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: transparent;
   border-radius: 10px;
 }
  
