--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -18,17 +18,6 @@
   --text-secondary: #c6c7d0;
 }
 
-html {
-  font-family: 'Open Sans', sans-serif;
-  color: var(--text-primary);
-}
-
-body {
-  -webkit-font-smoothing: antialiased;
-  background-color: var(--dark-primary);
-  display: flex;
-}
-
 /* Scroll personalizado*/
 
 ::-webkit-scrollbar {
@@ -50,6 +39,17 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background: var(--green-primary); 
+}
+
+html {
+  font-family: 'Open Sans', sans-serif;
+  color: var(--text-primary);
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  background-color: var(--dark-primary);
+  display: flex;
 }
 
 /* Section do Navbar */
@@ -207,23 +207,18 @@ body {
 .knowledge-container {
   padding: 2rem;
   width: 100%;
-  height: 100vh;
-}
-
-.knowledge-container > section {
-  max-width: 1430px;
-  width: 100%;
-  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  justify-content: center;
+  gap: 2rem;
+  max-width: calc(100vw - 18%);
+}
+
+.knowledge-container > section {
+  width: 100%;
 }
 
 .knowledge-container > section > div {
-  max-width: 1430px;
   width: 100%;
 }
 
@@ -234,7 +229,6 @@ body {
 }
 
 .knowledge-container > section > div > div {
-  max-width: 1430px;
   width: 100%;
   padding: 2rem;
   border-radius: 8px;
@@ -242,7 +236,6 @@ body {
 }
 
 .card-container {
-  max-width: 1420px;
   width: 100%;
   display: flex;
   gap: 2.5rem;
@@ -298,14 +291,126 @@ body {
   background-color: var(--green-primary);
 }
 
-.ph-database {
+.default-icon-color {
   color: #daa520;
 }
 
-.ph-monitor {
-  color: #daa520;
+/* ======= Página SOBRE ======= */
+
+.goals {
+  width: 100%;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 2rem;
 }
 
-.ph-wrench {
-  color: #daa520;
+.goals > section {
+  margin-left: 3rem;
+}
+
+.goals > section > h2 {
+  font-size: 1.875rem;
+  color: var(--text-secondary);
+}
+
+.goals > section > div {
+  margin-top: 1rem;
+  padding: 2rem;
+  border-radius: 10px;
+  font-size: 1.75rem;
+  background-color: var(--dark-secondary);
+}
+
+.goals > section > div > ul {
+  padding: 1rem;
+}
+
+.goals > section > div > ul > li > span {
+  color: var(--green-primary);
+  font-weight: 700;
+}
+
+@media (max-width: 998px) {
+  .about-container > h1 {
+    font-size: 4rem;
+  }
+}
+
+@media (max-width: 800px) {
+  body {
+    flex-direction: column;
+  }
+
+  .navbar {
+    max-width: none;
+    width: 100vw;
+    height: 150px;
+
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .image-container {
+    margin-bottom: 0;
+  }
+
+  .image-container img {
+    width: 110px;
+  }
+
+  .nav-container nav ul li a {
+    font-size: 1rem;
+  }
+
+  /* ======= Página SOBRE ======= */
+
+  .about-container {
+    text-align: center;
+  }
+
+  .about-container > h1 {
+    font-size: 3.25rem;
+  }
+
+  .info-container > address {
+    font-size: 1.25rem;
+  }
+
+  .contact-container > div > strong {
+    font-size: 1rem;
+  }
+  
+  .contact-container > div > a {
+    font-size: 1rem;
+  }
+
+  .about-me {
+    font-size: 1rem;
+  }
+
+  .social-media-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .social-media-container > ul > li {
+    width: 60px;
+    height: 60px;
+  }
+
+  .social-media-container > ul > li > a {
+    width: 60px;
+    height: 60px;
+  }
+
+  .knowledge-container {
+    max-width: 800px;
+  }
+
+  .knowledge-container > section {
+    width: 100%;
+  }
 }
