--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -339,7 +339,7 @@ body {
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 830px) {
   body {
     flex-direction: column;
   }
@@ -412,5 +412,21 @@ body {
 
   .knowledge-container > section {
     width: 100%;
+  }
+
+  .goals {
+
+  }
+
+  .goals > section {
+    margin-left: 0;
+  }
+
+  .goals > section > h2 {
+    font-size: 1.75rem;
+  }
+
+  .goals > section > div {
+    font-size: 1.5rem;
   }
 }
