--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -210,6 +210,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 2rem;
   max-width: calc(100vw - 18%);
 }
@@ -295,7 +296,7 @@ body {
   color: #daa520;
 }
 
-/* ======= Página SOBRE ======= */
+/* ======= Página Objetivos ======= */
 
 .goals {
   width: 100%;
@@ -334,6 +335,33 @@ body {
 }
 
 @media (max-width: 1500px) {
+
+  .knowledge-container > section {
+    max-width: 900px;
+  }
+
+  .knowledge-container > section > div > h2 {
+    font-size: 1rem;
+  }
+
+  .card-container li {
+    min-width: 9rem;
+    font-size: 0.75rem;
+  }
+
+  .card-container li div h3 {
+    font-size: 0.75rem;
+  }
+
+  .card-container li span p {
+    font-size: 0.6rem;
+  }
+
+  .card-container > li > div > img {
+    width: 30px;
+    height: 30px;
+  }
+
   .goals > section > h2 {
     font-size: 1.5rem;
   }
@@ -422,10 +450,6 @@ body {
 
   .knowledge-container > section {
     width: 100%;
-  }
-
-  .goals {
-
   }
 
   .goals > section {
