--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -110,6 +110,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height: 100vh;
 
   padding: 0 3rem;
 }
@@ -215,6 +216,7 @@ body {
 .knowledge-container {
   padding: 2rem;
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -308,6 +310,7 @@ body {
 
 .goals {
   width: 100%;
+  height: 100vh;
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -391,12 +394,17 @@ body {
   }
 
   .navbar {
+    position: static;
     max-width: none;
     width: 100vw;
     height: 150px;
 
     flex-direction: row;
     gap: 2rem;
+  }
+
+  .space {
+    display: none;
   }
 
   .image-container {
