--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -143,14 +143,14 @@ body {
 
 .contact-container > div > a {
   text-decoration: none;
-  color: var(--text-secondary);
   font-size: 1.35rem;
-
+  color: var(--green-primary);
+  
   transition: 200ms ease-in color;
 }
 
 .contact-container > div > a:hover {
-  color: var(--green-primary);
+  color: var(--text-secondary);
 }
 
 .about-me {
@@ -216,6 +216,7 @@ body {
 .knowledge-container {
   padding: 2rem;
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -462,6 +463,7 @@ body {
   }
 
   .knowledge-container {
+    height: auto;
     max-width: 800px;
   }
 
