--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -18,66 +18,31 @@
   --text-secondary: #c6c7d0;
 }
 
-/* Scroll personalizado*/
-
-::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
-  cursor: pointer;
-}
-
-::-webkit-scrollbar-track {
-  background: transparent;
-  border-radius: 10px;
-}
- 
-::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 10px;
-  cursor: pointer;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: var(--green-primary); 
-}
-
 html {
   font-family: 'Open Sans', sans-serif;
   color: var(--text-primary);
 }
 
 body {
-  -webkit-font-smoothing: antialiased;
   background-color: var(--dark-primary);
-  display: flex;
 }
 
 /* Section do Navbar */
 .navbar {
-  position: fixed;
   max-width: 18.75rem;
   min-width: 17rem;
   width: 100%;
   height: 100vh;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
+  float: left;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-
   background-color: var(--dark-secondary);
+  text-align: center;
 }
 
-.image-container {
-  margin-bottom: 2rem;
-}
-
-.image-container img {
-  border-radius: 50%;
-  border: var(--green-primary) 3px solid;
+.nav-container {
+  position: relative;
+  top: 35%;
 }
 
 .nav-container nav ul {
@@ -94,33 +59,45 @@ body {
   color: var(--text-secondary);
   font-size: 1.25rem;
   font-weight: 600;
-
+  opacity: 0.8;
   cursor: pointer;
-
-  transition: 200ms ease-in all;
 }
 
 .nav-container nav ul li a:hover {
   color: var(--green-primary);
 }
 
+.image-container {
+  display: inline-block;
+  margin-bottom: 2rem;
+  width: 200px;
+}
+
+.image-container img {
+  border-radius: 50%;
+  border: var(--green-primary) 3px solid;
+}
+
 /* ======= Página SOBRE ======= */
 
 .about-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   height: 100vh;
-
   padding: 0 3rem;
+  margin-left: 20rem;
 }
 
-.about-container > h1 {
+.about-container > div {
+  position: relative;
+  top: 25%;
+}
+
+.about-container h1 {
+  margin-left: -6px;
   font-size: 6rem;
   line-height: 1.6;
 }
 
-.about-container > h1 > span {
+.about-container  h1  span {
   color: var(--green-primary);
 }
 
@@ -145,11 +122,10 @@ body {
   text-decoration: none;
   font-size: 1.35rem;
   color: var(--green-primary);
-  transition: 200ms ease-in color;
 }
 
 .contact-container > div > a:hover {
-  color: var(--text-secondary);
+  opacity: 0.8;
 }
 
 .about-me {
@@ -159,18 +135,12 @@ body {
   line-height: 1.6;
 }
 
-.ph-hand-waving {
-  color: #daa520;
-}
-
 .social-media-container > ul {
   list-style: none;
-
-  display: flex;
-  gap: 2rem;
 }
 
 .social-media-container > ul > li {
+  display: inline-block;
   width: 80px;
   height: 80px;
   border-radius: 50%;
@@ -178,82 +148,67 @@ body {
   text-align: center;
 }
 
+.social-media-container > ul > li + li {
+  margin-left: 2rem;
+}
+
 .social-media-container > ul > li > a {
+  display: block;
   width: 80px; 
   height: 80px; 
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
   border-radius: 50%;
   text-decoration: none;
-
+  border: 2px solid transparent;
   cursor: pointer;
-
-  transition: 100ms ease-in border;
 }
 
 .social-media-container > ul > li > a:hover {
   border: var(--green-primary) 2px solid;
 }
 
-.social-media-container > ul > li > a > i {
-  color: var(--green-primary);
-  font-size: 1.75rem;
+.social-media-container > ul > li > a > img {
+  position: relative;
+  top: 30%;
+  width: 35px;
+  height: 30px;
 }
 
 /* ======= Página CONHECIMENTOS ======= */
 
-.space {
-  max-width: 18.75rem;
-  min-width: 17rem;
-  width: 100%;
-  background-color: transparent;
-}
-
 .knowledge-container {
   padding: 2rem;
-  width: 100vw;
   height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin-left: 20rem;
 }
 
 .card-container {
   list-style-type: none;
-  max-width: 1200px;
   font-weight: 700;
-  display: grid;
-  grid-template-columns: repeat(6, minmax(184px, 1fr));
-  gap: 1.2rem;
+  max-width: 800px;
+  position: relative;
+  top: 30%;
 }
 
 .card-container li {
+  max-width: 200px;
   background-color: #282a36;
   border: var(--green-primary) solid 2px;
   padding: 1rem;
   border-radius: 8px;
-}
-
-.card-container li {
-  display: flex;
-  justify-content: space-between;
-  gap: 1rem;
+  float: left;
+  margin: 1rem;
 }
 
 .card-container li h3 {
-  font-size: 1.2rem;
+  float: left;
+  margin-right: 1rem;
+  font-size: 1rem;
 }
 
 .card-container li img {
   width: 40px;
   height: 40px;
-}
-
-.default-icon-color {
-  color: #daa520;
 }
 
 /* ======= Página Objetivos ======= */
@@ -262,19 +217,17 @@ body {
   width: 100%;
   height: 100vh;
   padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  gap: 2rem;
 }
 
 .goals > section {
-  margin-left: 3rem;
+  margin-left: 20rem;
+  position: relative;
+  top: 15%;
 }
 
 .goals > section > h2 {
-  font-size: 1.875rem;
+  margin-top: 2rem;
+  font-size: 1.75rem;
   color: var(--text-secondary);
 }
 
@@ -282,8 +235,9 @@ body {
   margin-top: 1rem;
   padding: 2rem;
   border-radius: 10px;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   background-color: var(--dark-secondary);
+  max-width: 1000px;
 }
 
 .goals > section > div > ul {
@@ -293,180 +247,4 @@ body {
 .goals > section > div > ul > li > span {
   color: var(--green-primary);
   font-weight: 700;
-}
-
-@media (max-width: 1550px) {
-  .card-container {
-    grid-template-columns: repeat(5, minmax(184px, 1fr));
-  }
-}
-
-@media (max-width: 1350px) {
-  .card-container {
-    grid-template-columns: repeat(4, minmax(184px, 1fr));
-  }
-}
-
-@media (max-width: 1150px) {
-  .card-container {
-    grid-template-columns: repeat(3, minmax(184px, 1fr));
-  }
-}
-
-@media (max-width: 950px) {
-  .card-container {
-    grid-template-columns: repeat(2, minmax(184px, 1fr));
-  }
-}
-
-@media (max-width: 480px) {
-  .card-container {
-    grid-template-columns: repeat(1, minmax(284px, 1fr));
-  }
-}
-
-@media (max-width: 1500px) {
-
-  .card-container > li > img {
-    width: 30px;
-    height: 30px;
-  }
-
-  .goals > section > h2 {
-    font-size: 1.5rem;
-  }
-
-  .goals > section > div > ul > li {
-    font-size: 1.25rem;
-  }
-}
-
-@media (max-width: 998px) {
-  .about-container > h1 {
-    font-size: 4rem;
-  }
-}
-
-@media (max-width: 830px) {
-  body {
-    flex-direction: column;
-  }
-
-  .navbar {
-    position: static;
-    max-width: none;
-    width: 100vw;
-    height: 150px;
-
-    flex-direction: row;
-    gap: 2rem;
-  }
-
-  .space {
-    display: none;
-  }
-
-  .image-container {
-    margin-bottom: 0;
-  }
-
-  .image-container img {
-    width: 110px;
-  }
-
-  .nav-container nav ul li a {
-    font-size: 1rem;
-  }
-
-  /* ======= Página SOBRE ======= */
-
-  .about-container {
-    margin-top: 2rem;
-    height: auto;
-    text-align: center;
-  }
-
-  .about-container > h1 {
-    font-size: 3.25rem;
-  }
-
-  .info-container > address {
-    font-size: 1.25rem;
-  }
-
-  .contact-container > div > strong {
-    font-size: 1rem;
-  }
-  
-  .contact-container > div > a {
-    font-size: 1rem;
-  }
-
-  .about-me {
-    font-size: 1rem;
-  }
-
-  .social-media-container {
-    display: flex;
-    justify-content: center;
-  }
-
-  .social-media-container > ul > li {
-    width: 60px;
-    height: 60px;
-  }
-
-  .social-media-container > ul > li > a {
-    width: 60px;
-    height: 60px;
-  }
-
-  .knowledge-container {
-    height: auto;
-    max-width: 800px;
-  }
-
-  .knowledge-container > section {
-    width: 100%;
-  }
-
-  .goals {
-    height: auto;
-  }
-
-  .goals > section {
-    margin-left: 0;
-  }
-
-  .goals > section > h2 {
-    font-size: 1.75rem;
-  }
-
-  .goals > section > div {
-    font-size: 1.5rem;
-  }
-}
-
-@media (max-width: 422px) {
-  .about-container > h1 {
-    font-size: 2.25rem;
-  }
-}
-
-@media (max-width: 398px) {
-  .about-container > h1 {
-    font-size: 2rem;
-  }
-
-  .info-container > address {
-    font-size: 1rem;
-  }
-
-  .contact-container > div > strong {
-    font-size: 0.875rem;
-  }
-
-  .contact-container > div > a {
-    font-size: 0.875rem;
-  }
 }
