change page conhecimentos

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -186,8 +186,8 @@ body {
   list-style-type: none;
   font-weight: 700;
   max-width: 800px;
-  position: relative;
-  top: 30%;
+  position: absolute;
+  margin: calc(100% - 90%) auto;
 }
 
 .card-container li {
