--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -88,12 +88,12 @@ body {
 
 .about-container > div {
   position: relative;
-  top: 25%;
+  top: 18%;
 }
 
 .about-container h1 {
   margin-left: -6px;
-  font-size: 6rem;
+  font-size: 5.5rem;
   line-height: 1.6;
 }
 
@@ -144,7 +144,7 @@ body {
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  background-color: var(--dark-secondary);
+  background-color: var(--text-secondary);
   text-align: center;
 }
 
@@ -159,15 +159,15 @@ body {
 
   border-radius: 50%;
   text-decoration: none;
-  border: 2px solid transparent;
+  border: 2px solid var(--green-primary);
   cursor: pointer;
 }
 
 .social-media-container > ul > li > a:hover {
-  border: var(--green-primary) 2px solid;
+  box-shadow: -1px 1px 19px 4px var(--green-primary);
 }
 
-.social-media-container > ul > li > a > img {
+.social-media-img {
   position: relative;
   top: 30%;
   width: 35px;
