--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -27,6 +27,11 @@ body {
   background-color: var(--dark-primary);
 }
 
+.highlighted-text {
+  color: var(--green-primary);
+  font-weight: 700;
+}
+
 /* Section do Navbar */
 .navbar {
   max-width: 18.75rem;
@@ -38,11 +43,14 @@ body {
   border-bottom-right-radius: 10px;
   background-color: var(--dark-secondary);
   text-align: center;
+  position: relative;
 }
 
 .nav-container {
-  position: relative;
-  top: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .nav-container nav ul {
@@ -83,22 +91,19 @@ body {
 .about-container {
   height: 100vh;
   padding: 0 3rem;
-  margin-left: 20rem;
+  float: left;
 }
 
 .about-container > div {
-  position: relative;
-  top: 18%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .about-container h1 {
   margin-left: -6px;
   font-size: 5.5rem;
   line-height: 1.6;
-}
-
-.about-container  h1  span {
-  color: var(--green-primary);
 }
 
 .info-container > address {
@@ -179,7 +184,7 @@ body {
 .knowledge-container {
   padding: 2rem;
   height: 100vh;
-  margin-left: 20rem;
+  float: left;
 }
 
 .card-container {
@@ -187,7 +192,8 @@ body {
   font-weight: 700;
   max-width: 800px;
   position: absolute;
-  margin: 10% auto;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .card-container li {
@@ -214,26 +220,17 @@ body {
 /* ======= Página Objetivos ======= */
 
 .goals {
-  width: 100%;
-  height: 100vh;
   padding: 2rem;
+  float: left;
 }
 
-.goals > section:first-child {
-  margin-top: 6%;
+.goals > div {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
-.goals > section {
-  margin-left: 20rem;
-}
-
-.goals > section > h2 {
-  margin-top: 2rem;
-  font-size: 1.5rem;
-  color: var(--text-secondary);
-}
-
-.goals > section > div {
+.card {
   margin-top: 1rem;
   padding: 2rem;
   border-radius: 10px;
@@ -242,11 +239,12 @@ body {
   max-width: 1000px;
 }
 
-.goals ul {
-  padding: 1rem;
+section h2 {
+  margin-top: 2rem;
+  font-size: 1.5rem;
+  color: var(--text-secondary);
 }
 
-.goals ul > li > span {
-  color: var(--green-primary);
-  font-weight: 700;
+.goals ul {
+  padding: 1rem;
 }
