--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -82,8 +82,11 @@ body {
 }
 
 .image-container img {
+  background-color: var(--dark-primary);
+  width: 11rem;
+  height: 11rem;
   border-radius: 50%;
-  border: var(--green-primary) 3px solid;
+  border: var(--green-primary) 5px solid;
 }
 
 /* ======= Página SOBRE ======= */
@@ -149,7 +152,7 @@ body {
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  background-color: var(--text-secondary);
+  background-color: var(--dark-secondary);
   text-align: center;
 }
 
